--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1283,6 +1283,7 @@
   </section>
 </div>
 
+<!-- /----::foot-sp::----/ -->
 <div class="foot-sp">
   <!-- /----::foot-sp::----/ -->
   <section class="custom-container">
