--- a/src/theme/variable.scss
+++ b/src/theme/variable.scss
@@ -39,6 +39,7 @@ $table-sm-color: #fe7b03;
 $color-light-gray: #787777;
 $color-light-gray-2: #a1a1a1;
 $color-light-gray-3: #a1a1a14d;
+$color-light-gray-4: #dddddd;
 $color-light-2: #eeee;
 $color-black: #000000;
 $color-black-2: #333333;
