--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,9 @@
 
 /* Import global scss. */
 @import "./theme/base.scss";
+
+@import "~swiper/swiper-bundle.min.css";
+@import "~swiper/css/effect-fade";
+@import "~swiper/css/navigation";
+@import "~swiper/css/pagination";
+@import "~swiper/css/effect-coverflow";
